# dBG_project

./: .gitignore  CR.md  README.md  analysis.ipynb  report.md  script.sh  script_pggb.sh  todo.txt
data/: aedes.reg  analysis.ipynb  analysis_old.ipynb  encode_paths.sh  get_data.sh  make_graphs.sh  notebook.ipynb
nextflow/: analysis.ipynb  main.nf  nextflow.config
other/: scripts.sh
other/latex/: latex.fdb_latexmk  latex.fls  latex.tex
other/rapport/: consignes.md  main.tex
other/rapport/parts/: annexes.tex  introduction.tex  methods.tex  title.tex
other/rapport/parts/graphs/: graph.tex  graph_colored.tex  graph_compacted.tex
rust_dbg/: .gitignore  Cargo.toml  build.rs
rust_dbg/src/: bincode.rs  dbg.rs  debruijn.rs  debruijn_example.rs  debug.rs  embeddings.rs  encoder.rs  fasta_reader.rs  graph.rs  graph_2.rs  graph_old.rs  kmer.rs  kmers.rs  lib.rs  lookup.rs  main.rs  metadata.rs  path.rs  path_2.rs  path_old.rs  stats.rs
rust_dbg/src/encoder/: ExtensionVec_Encode.rs  Node_Encode.rs  basic_encoder.rs  gnome_encoder.rs  greedy_encoder.rs  serialize.rs  shortest_path.rs
rust_dbg/src/graph/: node_iterator.rs  shortest_path.rs
rust_dbg/src/path/: node_iterator.rs  node_list.rs  shortest_path.rs
rust_dbg/tests/: encoding.rs  graph.rs  plotter.rs  shortest_path.rs
rust_dbg/tests_old/: shortest_path.rs
scripts/: distance.tsv  divide_by_chromosomes.sh  divide_by_sequences.sh
