[package]
name = "rust_dbg"
version = "0.1.0"
edition = "2021"

[dependencies]
debruijn = { git = "https://github.com/flopau76/rust-debruijn.git", branch = "master" }
boomphf = { version = "0.6", features = ["serde"] }
serde = "1"
bincode = "1.3"

needletail = "0.6"
clap = { version = "4.5", features = ["derive"] }
plotters = "0.3"
chrono = "0.4"
