[package]
name = "rust_dbg"
version = "0.1.0"
edition = "2021"

[dependencies]
needletail = "0.6"
# packed-seq = "3"
packed-seq = { git = "https://github.com/flopau76/packed-seq", features = ["epserde"]}
boomphf = { version = "0.6" }
smallvec = "1"
epserde = "0.8"
epserde-derive = "0.8"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
rand = "0.9"