[package]
name = "rust_dbg"
version = "0.1.0"
edition = "2021"

[dependencies]
needletail = "0.6"
packed-seq = { version = "3", features = ["epserde"] }
boomphf = { version = "0.6" }
smallvec = "1"
epserde = "0.8"
bincode = { version = "2" }
vint64 = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
rand = "0.9"